# DataMorpher

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  sample_report.md
.github/workflows/: ci.yml
datamorpher/: __init__.py  __main__.py  cleaner.py  converter.py  reporter.py  streamlit_app.py
sample_data/: messy_data.csv  test_messy_data_improved.csv
tests/: test_cleaner.py  test_cli.py  test_converter.py  test_messy_sample.py  test_reporter.py
