[project]
name = "datamorpher"
version = "0.1.0"
description = "Data conversion and cleaning utility with CLI and Streamlit UI"
authors = [ { name = "DataMorpher" } ]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.1",
    "openpyxl>=3.1",
    "streamlit>=1.30",
    "typer>=0.9",
    "tabulate>=0.9"
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1"
]
[tool.pytest.ini_options]
addopts = "-vv"
[tool.ruff]
select = ["E", "F", "I"]
line-length = 79

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datamorpher*"]
